--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.sollwar.testcalc">
 
     <application
+        android:name=".app.Application"
         android:allowBackup="true"
-        android:name="com.sollwar.testcalc.app.Application"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -12,6 +12,7 @@
         android:theme="@style/Theme.TestCalc">
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.TestCalc.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
